--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <div class="number-container">
+        <div class="number-horizontal-section"></div>
+        <div class="number-vertical-section"></div>
+    </div>
 </body>
 </html>
