Created and positioned all number's sections

--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
 </head>
 <body>
     <div class="number-container">
-        <div class="number-horizontal-section"></div>
-        <div class="number-vertical-section"></div>
+        <div class="number-section-top">
+            <div class="number-horizontal-section"></div>
+        </div>
+        <div class="number-section-top-left">
+            <div class="number-vertical-section"></div>
+        </div>
+        <div class="number-section-top-right">
+            <div class="number-vertical-section"></div>
+        </div>
+        <div class="number-section-center">
+            <div class="number-horizontal-section"></div>
+        </div>
+        <div class="number-section-bottom-left">
+            <div class="number-vertical-section"></div>
+        </div>
+        <div class="number-section-bottom-right">
+            <div class="number-vertical-section"></div>
+        </div>
+        <div class="number-section-bottom">
+            <div class="number-horizontal-section"></div>
+        </div>
     </div>
 </body>
 </html>
