Created example with number 3 and app.js file added

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="number-container">
-        <div class="number-section-top">
-            <div class="number-horizontal-section"></div>
+    <div class="digit">
+        <div class="digit__section-top">
+            <div class="digit__section-h digit__section-h--active"></div>
         </div>
-        <div class="number-section-top-left">
-            <div class="number-vertical-section"></div>
+        <div class="digit__section-top-left">
+            <div class="digit__section-v"></div>
         </div>
-        <div class="number-section-top-right">
-            <div class="number-vertical-section"></div>
+        <div class="digit__section-top-right">
+            <div class="digit__section-v digit__section-v--active"></div>
         </div>
-        <div class="number-section-center">
-            <div class="number-horizontal-section"></div>
+        <div class="digit__section-center">
+            <div class="digit__section-h digit__section-h--active"></div>
         </div>
-        <div class="number-section-bottom-left">
-            <div class="number-vertical-section"></div>
+        <div class="digit__section-bottom-left">
+            <div class="digit__section-v"></div>
         </div>
-        <div class="number-section-bottom-right">
-            <div class="number-vertical-section"></div>
+        <div class="digit__section-bottom-right">
+            <div class="digit__section-v digit__section-v--active"></div>
         </div>
-        <div class="number-section-bottom">
-            <div class="number-horizontal-section"></div>
+        <div class="digit__section-bottom">
+            <div class="digit__section-h digit__section-h--active"></div>
         </div>
     </div>
 </body>
