Optimized css digit-section's classes

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 <body>
     <div class="digit">
         <div class="digit__section-top">
-            <div class="digit__section-h digit__section-h--active"></div>
+            <div class="digit__section digit__section--active"></div>
         </div>
         <div class="digit__section-top-left">
-            <div class="digit__section-v"></div>
+            <div class="digit__section digit__section--vertical"></div>
         </div>
         <div class="digit__section-top-right">
-            <div class="digit__section-v digit__section-v--active"></div>
+            <div class="digit__section digit__section--vertical digit__section--active"></div>
         </div>
         <div class="digit__section-center">
-            <div class="digit__section-h digit__section-h--active"></div>
+            <div class="digit__section digit__section--active"></div>
         </div>
         <div class="digit__section-bottom-left">
-            <div class="digit__section-v"></div>
+            <div class="digit__section digit__section--vertical"></div>
         </div>
         <div class="digit__section-bottom-right">
-            <div class="digit__section-v digit__section-v--active"></div>
+            <div class="digit__section digit__section--vertical digit__section--active"></div>
         </div>
         <div class="digit__section-bottom">
-            <div class="digit__section-h digit__section-h--active"></div>
+            <div class="digit__section digit__section--active"></div>
         </div>
     </div>
 </body>
