--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 <body>
     <div class="digit">
         <div class="digit__section-top">
-            <div class="digit__section digit__section--active"></div>
+            <div class="digit__section digit__section-available-02356789"></div>
         </div>
         <div class="digit__section-top-left">
-            <div class="digit__section digit__section--vertical"></div>
+            <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
         </div>
         <div class="digit__section-top-right">
-            <div class="digit__section digit__section--vertical digit__section--active"></div>
+            <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
         </div>
         <div class="digit__section-center">
-            <div class="digit__section digit__section--active"></div>
+            <div class="digit__section digit__section-available-2345689"></div>
         </div>
         <div class="digit__section-bottom-left">
-            <div class="digit__section digit__section--vertical"></div>
+            <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
         </div>
         <div class="digit__section-bottom-right">
-            <div class="digit__section digit__section--vertical digit__section--active"></div>
+            <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
         </div>
         <div class="digit__section-bottom">
-            <div class="digit__section digit__section--active"></div>
+            <div class="digit__section digit__section-available-0235689"></div>
         </div>
     </div>
+    <script src="script/app.js"></script>
 </body>
 </html>
