--- a/index.html
+++ b/index.html
@@ -4,32 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Clock</title>
+    <title>Countdown Timer</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="digit">
-        <div class="digit__section-top">
-            <div class="digit__section digit__section-available-02356789"></div>
+    <div class="container">
+        <div class="digit" id="seconds-high-digit">
+            <div class="digit__section-top">
+                <div class="digit__section digit__section-available-02356789"></div>
+            </div>
+            <div class="digit__section-top-left">
+                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
+            </div>
+            <div class="digit__section-top-right">
+                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
+            </div>
+            <div class="digit__section-center">
+                <div class="digit__section digit__section-available-2345689"></div>
+            </div>
+            <div class="digit__section-bottom-left">
+                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
+            </div>
+            <div class="digit__section-bottom-right">
+                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
+            </div>
+            <div class="digit__section-bottom">
+                <div class="digit__section digit__section-available-0235689"></div>
+            </div>
         </div>
-        <div class="digit__section-top-left">
-            <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-        </div>
-        <div class="digit__section-top-right">
-            <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-        </div>
-        <div class="digit__section-center">
-            <div class="digit__section digit__section-available-2345689"></div>
-        </div>
-        <div class="digit__section-bottom-left">
-            <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-        </div>
-        <div class="digit__section-bottom-right">
-            <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-        </div>
-        <div class="digit__section-bottom">
-            <div class="digit__section digit__section-available-0235689"></div>
-        </div>
+        <div class="digit" id="seconds-low-digit">
+            <div class="digit__section-top">
+                <div class="digit__section digit__section-available-02356789"></div>
+            </div>
+            <div class="digit__section-top-left">
+                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
+            </div>
+            <div class="digit__section-top-right">
+                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
+            </div>
+            <div class="digit__section-center">
+                <div class="digit__section digit__section-available-2345689"></div>
+            </div>
+            <div class="digit__section-bottom-left">
+                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
+            </div>
+            <div class="digit__section-bottom-right">
+                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
+            </div>
+            <div class="digit__section-bottom">
+                <div class="digit__section digit__section-available-0235689"></div>
+            </div>
+        </div>        
     </div>
     <script src="script/app.js"></script>
 </body>
