Added flashing dots on time change

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <div class="digit__section digit__section-available-0235689"></div>
             </div>
         </div>
+        <div class="dots">
+            <div class="dot dot--active"></div>
+            <div class="dot dot--active"></div>
+        </div>
         <div class="digit" id="minutes-high-digit">
             <div class="digit__section-top">
                 <div class="digit__section digit__section-available-02356789"></div>
@@ -100,6 +104,10 @@
             <div class="digit__section-bottom">
                 <div class="digit__section digit__section-available-0235689"></div>
             </div>
+        </div>
+        <div class="dots">
+            <div class="dot dot--active"></div>
+            <div class="dot dot--active"></div>
         </div>
         <div class="digit" id="seconds-high-digit">
             <div class="digit__section-top">
