--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <div class="container">
+        <form>
+            <select name="hours" id="hours"></select>
+            <select name="minutes" id="minutes"></select>
+            <select name="seconds" id="seconds"></select>
+        </form>
+        <button onclick="startTimer()">Старт</button>
+        <button onclick="stopTimer()">Стоп</button>
+    </div>
+    <div class="container">
         <div class="digit" id="hours-high-digit">
             <div class="digit__section-top">
                 <div class="digit__section digit__section-available-02356789"></div>
