--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <select name="minutes" id="minutes"></select>
             <select name="seconds" id="seconds"></select>
         </form>
-        <button onclick="startTimer()">Старт</button>
-        <button onclick="stopTimer()">Стоп</button>
+        <button id="start-btn" onclick="startTimer()">Старт</button>
+        <button id="stop-btn" onclick="stopTimer()">Стоп</button>
     </div>
     <div class="container">
         <div class="digit" id="hours-high-digit">
