--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Timer</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/digit.css">
+    <link rel="stylesheet" href="style/dot.css">
 </head>
 <body>
     <div class="container">
