--- a/index.html
+++ b/index.html
@@ -20,152 +20,20 @@
         <button id="stop-btn" onclick="stopTimer()">Стоп</button>
     </div>
     <div class="container">
-        <div class="digit" id="hours-high-digit">
-            <div class="digit__section-top">
-                <div class="digit__section digit__section-available-02356789"></div>
-            </div>
-            <div class="digit__section-top-left">
-                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-            </div>
-            <div class="digit__section-top-right">
-                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-            </div>
-            <div class="digit__section-center">
-                <div class="digit__section digit__section-available-2345689"></div>
-            </div>
-            <div class="digit__section-bottom-left">
-                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-            </div>
-            <div class="digit__section-bottom-right">
-                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-            </div>
-            <div class="digit__section-bottom">
-                <div class="digit__section digit__section-available-0235689"></div>
-            </div>
-        </div>
-        <div class="digit" id="hours-low-digit">
-            <div class="digit__section-top">
-                <div class="digit__section digit__section-available-02356789"></div>
-            </div>
-            <div class="digit__section-top-left">
-                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-            </div>
-            <div class="digit__section-top-right">
-                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-            </div>
-            <div class="digit__section-center">
-                <div class="digit__section digit__section-available-2345689"></div>
-            </div>
-            <div class="digit__section-bottom-left">
-                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-            </div>
-            <div class="digit__section-bottom-right">
-                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-            </div>
-            <div class="digit__section-bottom">
-                <div class="digit__section digit__section-available-0235689"></div>
-            </div>
-        </div>
+        <div class="digit" id="hours-high-digit"></div>
+        <div class="digit" id="hours-low-digit"></div>
         <div class="dots">
             <div class="dot dot--active"></div>
             <div class="dot dot--active"></div>
         </div>
-        <div class="digit" id="minutes-high-digit">
-            <div class="digit__section-top">
-                <div class="digit__section digit__section-available-02356789"></div>
-            </div>
-            <div class="digit__section-top-left">
-                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-            </div>
-            <div class="digit__section-top-right">
-                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-            </div>
-            <div class="digit__section-center">
-                <div class="digit__section digit__section-available-2345689"></div>
-            </div>
-            <div class="digit__section-bottom-left">
-                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-            </div>
-            <div class="digit__section-bottom-right">
-                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-            </div>
-            <div class="digit__section-bottom">
-                <div class="digit__section digit__section-available-0235689"></div>
-            </div>
-        </div>
-        <div class="digit" id="minutes-low-digit">
-            <div class="digit__section-top">
-                <div class="digit__section digit__section-available-02356789"></div>
-            </div>
-            <div class="digit__section-top-left">
-                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-            </div>
-            <div class="digit__section-top-right">
-                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-            </div>
-            <div class="digit__section-center">
-                <div class="digit__section digit__section-available-2345689"></div>
-            </div>
-            <div class="digit__section-bottom-left">
-                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-            </div>
-            <div class="digit__section-bottom-right">
-                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-            </div>
-            <div class="digit__section-bottom">
-                <div class="digit__section digit__section-available-0235689"></div>
-            </div>
-        </div>
+        <div class="digit" id="minutes-high-digit"></div>
+        <div class="digit" id="minutes-low-digit"></div>
         <div class="dots">
             <div class="dot dot--active"></div>
             <div class="dot dot--active"></div>
         </div>
-        <div class="digit" id="seconds-high-digit">
-            <div class="digit__section-top">
-                <div class="digit__section digit__section-available-02356789"></div>
-            </div>
-            <div class="digit__section-top-left">
-                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-            </div>
-            <div class="digit__section-top-right">
-                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-            </div>
-            <div class="digit__section-center">
-                <div class="digit__section digit__section-available-2345689"></div>
-            </div>
-            <div class="digit__section-bottom-left">
-                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-            </div>
-            <div class="digit__section-bottom-right">
-                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-            </div>
-            <div class="digit__section-bottom">
-                <div class="digit__section digit__section-available-0235689"></div>
-            </div>
-        </div>
-        <div class="digit" id="seconds-low-digit">
-            <div class="digit__section-top">
-                <div class="digit__section digit__section-available-02356789"></div>
-            </div>
-            <div class="digit__section-top-left">
-                <div class="digit__section digit__section--vertical digit__section-available-045689"></div>
-            </div>
-            <div class="digit__section-top-right">
-                <div class="digit__section digit__section--vertical digit__section-available-01234789"></div>
-            </div>
-            <div class="digit__section-center">
-                <div class="digit__section digit__section-available-2345689"></div>
-            </div>
-            <div class="digit__section-bottom-left">
-                <div class="digit__section digit__section--vertical digit__section-available-0268"></div>
-            </div>
-            <div class="digit__section-bottom-right">
-                <div class="digit__section digit__section--vertical digit__section-available-013456789"></div>
-            </div>
-            <div class="digit__section-bottom">
-                <div class="digit__section digit__section-available-0235689"></div>
-            </div>
-        </div>        
+        <div class="digit" id="seconds-high-digit"></div>
+        <div class="digit" id="seconds-low-digit"></div>        
     </div>
     <script src="script/app.js"></script>
 </body>
