Replaced page builing function in separate page-builder.js file

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="digit" id="seconds-high-digit"></div>
         <div class="digit" id="seconds-low-digit"></div>        
     </div>
+    <script src="script/page-builder.js"></script>
     <script src="script/app.js"></script>
 </body>
 </html>
