--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
     <div class="container">
         <div class="control-panel">
             <form>
-                <select name="hours" id="hours"></select>
-                <select name="minutes" id="minutes"></select>
-                <select name="seconds" id="seconds"></select>
+                <select class="hours" name="hours"></select>
+                <select class="minutes" name="minutes"></select>
+                <select class="seconds" name="seconds"></select>
             </form>
-            <button id="start-btn">Старт</button>
-            <button id="stop-btn">Стоп</button>    
+            <button class="start-btn">Старт</button>
+            <button class="stop-btn">Стоп</button>    
         </div>
     </div>
     <div class="container">
         <div class="timer">
-            <div class="digit" id="hours-high-digit"></div>
-            <div class="digit" id="hours-low-digit"></div>
+            <div class="digit hours-high-digit"></div>
+            <div class="digit hours-low-digit"></div>
             <div class="dots">
                 <div class="dot dot--active"></div>
                 <div class="dot dot--active"></div>
             </div>
-            <div class="digit" id="minutes-high-digit"></div>
-            <div class="digit" id="minutes-low-digit"></div>
+            <div class="digit minutes-high-digit"></div>
+            <div class="digit minutes-low-digit"></div>
             <div class="dots">
                 <div class="dot dot--active"></div>
                 <div class="dot dot--active"></div>
             </div>
-            <div class="digit" id="seconds-high-digit"></div>
-            <div class="digit" id="seconds-low-digit"></div>            
+            <div class="digit seconds-high-digit"></div>
+            <div class="digit seconds-low-digit"></div>            
         </div>
     </div>
     <script type="module" src="script/app.js"></script>
