Added control buttons hiding

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <select class="seconds" name="seconds"></select>
             </form>
             <button class="start-btn">Старт</button>
-            <button class="stop-btn">Стоп</button>    
+            <button class="stop-btn hide">Стоп</button>    
         </div>
     </div>
     <div class="container">
